--- a/4-A (donna)/index.html
+++ b/4-A (donna)/index.html
@@ -95,14 +95,14 @@
 
         // handle clear button
         function handleclear(){
-            setCalc(){
+            setCalc({
                 current: '0',
             total: '',
             isInitial: true,
             preOp: ''
         });    
             }
-        }
+        
 
         return (
             <div className="calculator">
