--- a/4-A (donna)/index.html
+++ b/4-A (donna)/index.html
@@ -120,16 +120,16 @@
                 let total="";
                 switch(operator){
                 case'*':
-                    total *=parseFloat(cal.current);
+                    total *=parseFloat(cal.current); //equivalent to total = tolal * parseFloat(calc.current)
                     break;
                  case'/':
-                    total *=parseFloat(cal.current);
+                    total *=parseFloat(cal.current); //equivalent to total = tolal / parseFloat(calc.current)
                     break;
                 case'+':
-                    total *=parseFloat(cal.current);
+                    total *=parseFloat(cal.current); //equivalent to total = tolal + parseFloat(calc.current)
                     break;
                 case'-':
-                    total *=parseFloat(cal.current);
+                    total *=parseFloat(cal.current); //equivalent to total = tolal - parseFloat(calc.current)
                     break;
                  default:
                     total *=parseFloat(cal.current);
@@ -150,17 +150,17 @@
                 <CalcButton value="7" onClick={handleNumber} />
                 <CalcButton value="8" onClick={handleNumber} />
                 <CalcButton value="9" onClick={handleNumber} />
-                <CalcButton className="operator" value="*" />
+                <CalcButton className="operator" value="*"  onClick={handleOperator}/>
 
                 <CalcButton value="4" onClick={handleNumber} />
                 <CalcButton value="5" onClick={handleNumber} />
                 <CalcButton value="6" onClick={handleNumber} />
-                <CalcButton className="operator" value="/" />
+                <CalcButton className="operator" value="/"  onClick={handleOperator}/>
 
                 <CalcButton value="1" onClick={handleNumber} />
                 <CalcButton value="2" onClick={handleNumber} />
                 <CalcButton value="3" onClick={handleNumber} />
-                <CalcButton className="operator" value="+" />
+                <CalcButton className="operator" value="+"  onClick={handleOperator} />
 
                 <CalcButton value="C" onClick={handleclear} />
                 <CalcButton value="0" onClick={handleNumber} />
